- cpan testers:
  o detect rpm-4.1[0-2] which had another rpmPkgSign API
  o list dependancies
  o skip a test with rpm-4.1[12] due to a segfault
  o use PkgConfig in order to find rpm

Version 0.37 - 27 October 2017

- fix running rpm_produced
- improve doc
- fix a segfault
- fix rpm-4.14 regressions
- testsuite:
  o disable tests that involve a pasphrase

Version 0.36 - 26 October 2016

- fix segfault in testsuite
- reenable some tests

Version 0.35 - 1 August 2015

- drop methods only supported in rpm < 4.9
- drop support for rpm > 4.9.0
- fix compiling with rpm-4.13

Version 0.34 - 15 September 2014

- fix build with RCs of rpm

Version 0.33 - 29 May 2013

- fix build (fix detecting stable rpm)

Version 0.32 - 17 December 2012

- drop support for repackage (not working anymore since rpm-4.6)
- fix parsing new rpm headers
- fix retrieving rpm version with beta versions
- fix segfaulting with rpm-4.11 retrieving RPMLOG_*
- fix srcrpm()
- fix --rpmversion (broken for 6+ years...)

Version 0.31 - 25 June 2012

- drop rpm5 functions: rpmsysinfodep, rpmgetconfdep, rpmcpuinfodep, rpmpipedep
  & rpmunamedep (unimplemented for 4 years...)
- new spec:
  o fix forcing 'noarch_check' & 'force' parameters
  o drop unused 'cookie', 'passphrase', 'rootdir' & 'verify' parameters (useless with rpm-4.9.x anyway)

Version 0.30 - 15 June 2012

- functions that not are implemented since switching to rpm-4.6 now die
- internal cleanups
- srcrpm(): fix returning "...nosrc.rpm" instead of "...src.rpm" when needed
  (it always returned "...src.rpm" since rpm-4.9+)
- use rpm-4.6+ API, not rpm-4.4 compatibility one
  (fix some memleaks btw)

Version 0.28 - 9 June 2012

- fix build with rpm-4.10.0

Version 0.27 - 21 December 2011

- make Spec->build works with rpm-4.9
- make initdb do all the needed work
- make traverse usefull again with rpm-4.9

Version 0.26 - 21 December 2011

- fix for a random segfault
- report script errors

Version 0.25 - 14 December 2011
